// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExpandableCard > renders correctly with complex header 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-0[open] {
  border-color: #8c40ef;
}

.emotion-0[open]>.emotion-12 {
  border-color: #8c40ef;
}

.emotion-0[open] .emotion-4 {
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1rem;
  padding: 1.5rem;
  list-style-type: none;
  cursor: pointer;
}

.emotion-2[data-disabled="true"] {
  background: #f9f9fa;
  border-radius: 0.25rem;
  cursor: not-allowed;
}

.emotion-5 {
  vertical-align: middle;
  fill: #3f4250;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.emotion-5 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

.emotion-7 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11 {
  border-top: 1px solid #d9dadd;
  padding: 1.5rem;
}

<div
    data-testid="testing"
  >
    <details
      class="emotion-0 emotion-1"
    >
      <summary
        class="emotion-2 emotion-3"
        data-disabled="false"
      >
        <svg
          class="emotion-4 emotion-5 emotion-6"
          viewBox="0 0 20 20"
        >
          <path
            clip-rule="evenodd"
            d="M5.47 7.47a.75.75 0 0 1 1.06 0l3.72 3.72 3.72-3.72a.75.75 0 1 1 1.06 1.06l-4.25 4.25a.75.75 0 0 1-1.06 0L5.47 8.53a.75.75 0 0 1 0-1.06"
            fill-rule="evenodd"
          />
        </svg>
        <div>
          <h2
            class="emotion-7 emotion-8"
          >
            Title
          </h2>
          <p
            class="emotion-9 emotion-8"
          >
            Description
          </p>
        </div>
      </summary>
      <div
        class="emotion-11 emotion-12"
      >
        Content
      </div>
    </details>
  </div>
</DocumentFragment>
`;

exports[`ExpandableCard > renders correctly with default values 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-0[open] {
  border-color: #8c40ef;
}

.emotion-0[open]>.emotion-10 {
  border-color: #8c40ef;
}

.emotion-0[open] .emotion-4 {
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1rem;
  padding: 1.5rem;
  list-style-type: none;
  cursor: pointer;
}

.emotion-2[data-disabled="true"] {
  background: #f9f9fa;
  border-radius: 0.25rem;
  cursor: not-allowed;
}

.emotion-5 {
  vertical-align: middle;
  fill: #3f4250;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.emotion-5 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

.emotion-7 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9 {
  border-top: 1px solid #d9dadd;
  padding: 1.5rem;
}

<div
    data-testid="testing"
  >
    <details
      class="emotion-0 emotion-1"
    >
      <summary
        class="emotion-2 emotion-3"
        data-disabled="false"
      >
        <svg
          class="emotion-4 emotion-5 emotion-6"
          viewBox="0 0 20 20"
        >
          <path
            clip-rule="evenodd"
            d="M5.47 7.47a.75.75 0 0 1 1.06 0l3.72 3.72 3.72-3.72a.75.75 0 1 1 1.06 1.06l-4.25 4.25a.75.75 0 0 1-1.06 0L5.47 8.53a.75.75 0 0 1 0-1.06"
            fill-rule="evenodd"
          />
        </svg>
        <h2
          class="emotion-7 emotion-8"
        >
          Title
        </h2>
      </summary>
      <div
        class="emotion-9 emotion-10"
      >
        Content
      </div>
    </details>
  </div>
</DocumentFragment>
`;
